--- a/index.html
+++ b/index.html
@@ -8,32 +8,36 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <style>
-    /* Remove the navbar's default rounded borders and increase the bottom margin */ 
+    /* Remova as bordas arredondadas padrão da barra de navegação e aumente a margem inferior */ 
     .navbar {
       margin-bottom: 50px;
       border-radius: 0;
     }
     
-    /* Remove the jumbotron's default bottom margin */ 
+    /* Remova a margem inferior padrão do jumbotron */ 
      .jumbotron {
       margin-bottom: 0;
+      background-color: #808080
+
     }
    
-    /* Add a gray background color and some padding to the footer */
+    /* Adicionar uma cor de plano de fundo cinza e algum preenchimento ao rodapé */
     footer {
-      background-color: #f2f2f2;
+      background-color:  #DCDCDC	;
       padding: 25px;
     }
+    body{
+    background-color:  #f2f2f2
   </style>
 </head>
 <body>
 
-<div class="jumbotron">
+<!--<div class="jumbotron">
   <div class="container text-center">
     <h1>Suporte</h1>      
     <p>Bitmax Informatica</p>
   </div>
-</div>
+</div> -->
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -54,7 +58,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 2.00L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <button type="button" class="btn btn-primary btn-block">Download</button>
+       <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -62,7 +66,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.91L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <button type="button" class="btn btn-primary btn-block">Download</button>
+        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -70,7 +74,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <button type="button" class="btn btn-primary btn-block">Download</button>
+        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
   </div>
@@ -83,7 +87,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <button type="button" class="btn btn-primary btn-block">Download</button>
+        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -91,7 +95,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">BITMAX EMPRESARIAL 1.92l</div>
-        <button type="button" class="btn btn-primary btn-block">Download</button>
+        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -99,7 +103,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <button type="button" class="btn btn-primary btn-block">Download</button>
+        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
   </div>
