--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 2.00L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-       <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
+       <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -66,7 +66,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.91L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
+        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -74,7 +74,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
+        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
   </div>
@@ -87,7 +87,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
+        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -95,7 +95,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">BITMAX EMPRESARIAL 1.92l</div>
-        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
+        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -103,7 +103,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="https://doc-0s-3s-docs.googleusercontent.com/docs/securesc/ss8f3evo43nmjt2fr2eb9g0j2ju42pkf/lds18nalrc53fvm9bjf6l196v798ofng/1550930400000/15133642053799536061/15133642053799536061/1XDAooV1fFM9_E_Fq68eUHIth-Tx55GJC?e=download&h=05441626367927337377&nonce=u0bof47bn712c&user=15133642053799536061&hash=g9kdvvttmn9b41lufe8guieq1v3615mf" class="btn btn-primary btn-block">Download</a>
+        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
   </div>
