--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <span class="icon-bar"></span>                        
       </button>
       <a class="navbar-brand" href="#">Inicio</a>
+      <a class="navbar-brand" href="#">Manual</a>
+      <a class="navbar-brand" href="https://www.bitmax.com.br">Ir para Bitmax</a>
     </div>
 </nav>
 
@@ -57,24 +59,24 @@
       <div class="panel panel-primary">
         <div class="panel-heading">BITMAX EMPRESARIAL 2.00L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Vide informações no arquivo</div>
-       <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
+        <div class="panel-footer">Instalador versão 21.02.2019</div>
+       <a href="https://uce4c5b4a8a64efab299bfb839f1.dl.dropboxusercontent.com/cd/0/get/Ab4wLoqCGRqE0mIFLGLt4Hkmvchawp6-ipI0y6etp3DbteSc_iEm1MD5T9BBrpXWg0JJlfYaRf-dC6Yboi0zO4FRcr9YamkoSvcdRXiMI9VG1spjcIZyheyMqXroFsViS6k/file#" class="btn btn-primary btn-block" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
         <div class="panel-heading">BITMAX EMPRESARIAL 1.91L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
+        <div class="panel-footer">Atualizador versão 21.02.2019</div>
+        <a href="https://uce4c5b4a8a64efab299bfb839f1.dl.dropboxusercontent.com/cd/0/get/Ab4wLoqCGRqE0mIFLGLt4Hkmvchawp6-ipI0y6etp3DbteSc_iEm1MD5T9BBrpXWg0JJlfYaRf-dC6Yboi0zO4FRcr9YamkoSvcdRXiMI9VG1spjcIZyheyMqXroFsViS6k/file#" class="btn btn-primary btn-block" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
+        <div class="panel-footer">Atualizador 30.11.2018</div>
+        <a href="https://uce4c5b4a8a64efab299bfb839f1.dl.dropboxusercontent.com/cd/0/get/Ab4wLoqCGRqE0mIFLGLt4Hkmvchawp6-ipI0y6etp3DbteSc_iEm1MD5T9BBrpXWg0JJlfYaRf-dC6Yboi0zO4FRcr9YamkoSvcdRXiMI9VG1spjcIZyheyMqXroFsViS6k/file#" class="btn btn-primary btn-block" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
   </div>
@@ -87,23 +89,23 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
+        <a href="https://uce4c5b4a8a64efab299bfb839f1.dl.dropboxusercontent.com/cd/0/get/Ab4wLoqCGRqE0mIFLGLt4Hkmvchawp6-ipI0y6etp3DbteSc_iEm1MD5T9BBrpXWg0JJlfYaRf-dC6Yboi0zO4FRcr9YamkoSvcdRXiMI9VG1spjcIZyheyMqXroFsViS6k/file#" class="btn btn-primary btn-block" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
-        <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">BITMAX EMPRESARIAL 1.92l</div>
-        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
+        <div class="panel-heading">IBEXPERT</div>
+        <div class="panel-body"><img src="https://lh3.googleusercontent.com/proxy/09b8ur3uW1W1QuIL7zjAvGYv_-ZTVlDa3RV1t_OISwvP6f9brdfO32neqXttlc7Wwjjd0koSiBjm6vWsZKk-EWcdxTUZxgFlQJme3Re61Q=w530-h408-p-rw" class="img-responsive" style="width:27%"; " alt="Image"></div>
+        <div class="panel-footer">Ib expert</div>
+        <a href="https://uce4c5b4a8a64efab299bfb839f1.dl.dropboxusercontent.com/cd/0/get/Ab4wLoqCGRqE0mIFLGLt4Hkmvchawp6-ipI0y6etp3DbteSc_iEm1MD5T9BBrpXWg0JJlfYaRf-dC6Yboi0zO4FRcr9YamkoSvcdRXiMI9VG1spjcIZyheyMqXroFsViS6k/file#" class="btn btn-primary btn-block" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
-        <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="http://download949.mediafire.com/4h8swxeespjg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block">Download</a>
+        <div class="panel-heading">Firebird</div>
+        <div class="panel-body"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYSrYt2EPXIDkza1XB18XTUdY7bGd8ytHRZIJCYGrPWJbdkoZ0" class="img-responsive" style="width:88%" alt="Image"></div>
+        <div class="panel-footer">Firebird 2.0.7</div>
+        <a href="https://uce4c5b4a8a64efab299bfb839f1.dl.dropboxusercontent.com/cd/0/get/Ab4wLoqCGRqE0mIFLGLt4Hkmvchawp6-ipI0y6etp3DbteSc_iEm1MD5T9BBrpXWg0JJlfYaRf-dC6Yboi0zO4FRcr9YamkoSvcdRXiMI9VG1spjcIZyheyMqXroFsViS6k/file#" class="btn btn-primary btn-block" class="btn btn-primary btn-block">Download</a>
       </div>
     </div>
   </div>
