--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
       <div class="panel panel-primary">
         <div class="panel-heading">BITMAX EMPRESARIAL 2.00L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Instalador versão 21.02.2019</div>
-       <a href="http://www.mediafire.com/file/e78bo642ss3xcd3/aida.zip/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <div class="panel-footer">Instalador versão 20.02.2019+IBexpert</div>
+       <a href="http://download2268.mediafire.com/u4v1hr4kaygg/k8oo433wu1c17na/BitmaxInstall_Empresarial_2.00L.rar" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 1.91L</div>
+        <div class="panel-heading">BITMAX EMPRESARIAL 2.00L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Atualizador versão 21.02.2019</div>
-        <a href="http://www.mediafire.com/file/e78bo642ss3xcd3/aida.zip/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <div class="panel-footer">Executáveis Atualização 20.02.2019+IBexpert</div>
+        <a href="http://download2262.mediafire.com/1mcttin0tbog/h5i8y0np7jqgfiv/Atualiza%C3%A7%C3%B5es+Empresarial+20.02.2019.rar" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
+        <div class="panel-heading">BITMAX EMPRESARIAL 191L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Atualizador 30.11.2018</div>
-        <a href="http://www.mediafire.com/file/e78bo642ss3xcd3/aida.zip/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <div class="panel-footer">Executáveis Atualização 30.11.2018+IBexpert</div>
+        <a href="http://download2263.mediafire.com/8bj8oc1u7iug/ihf209ixsedl5bf/Atualiza%C3%A7%C3%A3o+Empresarial+30.11.2018.rar" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
   </div>
@@ -94,10 +94,10 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 1.92l</div>
+        <div class="panel-heading">VAZIO</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="http://download1887.mediafire.com/olmvqgagyidg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -105,7 +105,7 @@
         <div class="panel-heading">IBEXPERT</div>
         <div class="panel-body"><img src="https://lh3.googleusercontent.com/proxy/09b8ur3uW1W1QuIL7zjAvGYv_-ZTVlDa3RV1t_OISwvP6f9brdfO32neqXttlc7Wwjjd0koSiBjm6vWsZKk-EWcdxTUZxgFlQJme3Re61Q=w530-h408-p-rw" class="img-responsive" style="width:27%"; " alt="Image"></div>
         <div class="panel-footer">Ib expert</div>
-        <a href="http://download1887.mediafire.com/olmvqgagyidg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="http://download1648.mediafire.com/3bcidccovifg/c496d5yden1fb8r/ibexpert.exe" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -113,7 +113,7 @@
         <div class="panel-heading">Firebird</div>
         <div class="panel-body"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYSrYt2EPXIDkza1XB18XTUdY7bGd8ytHRZIJCYGrPWJbdkoZ0" class="img-responsive" style="width:88%" alt="Image"></div>
         <div class="panel-footer">Firebird 2.0.7</div>
-        <a href="http://download1887.mediafire.com/olmvqgagyidg/e78bo642ss3xcd3/aida.zip" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
   </div>
