--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Inicio</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Manual
+        <a class="dropdown-toggle" type="button" data-toggle="dropdown" href="#">Manual
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Manual 1</a></li>
