--- a/index.html
+++ b/index.html
@@ -39,36 +39,32 @@
   </div>
 </div> -->
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="https://www.bitmax.com.br/" target="_blank">Bitmax</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Inicio</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" type="button" data-toggle="dropdown" href="#">Manual
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Manual 1</a></li>
-          <li><a href="#">Manual 2</a></li>
-          <li><a href="#">Manual 3</a></li>
-        </ul>
-      </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
 
-<div class="container">    
+<div class="container">
+  <h2>Área de Suporte</h2>
+  <ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#home">Início</a></li>
+    <li><a data-toggle="tab" href="#menu1">Downloads</a></li>
+    <li><a data-toggle="tab" href="#menu2">Manuais</a></li>
+    <li><a data-toggle="tab" href="#menu3">Perguntas Frequentes</a></li>
+  </ul>
+
+  <div class="tab-content">
+    <div id="home" class="tab-pane fade in active">
+      <h3>Institucional</h3>
+      <p>Informática é um termo usado para descrever o conjunto das ciências relacionadas à coleta, armazenamento, transmissão e processamento de informações em meios digitais, estando incluídas neste grupo: a ciência da computação, os sistemas de informação, a teoria da informação, o processo de cálculo, a análise numérica e os métodos teóricos da representação dos conhecimentos e da modelagem dos problemas. Mas também a informática pode ser entendida como ciência que estuda o conjunto de informações e conhecimentos por meios digitais.<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>   
+    </div>
+    <div id="menu1" class="tab-pane fade">
+      <h3>Downloads</h3>
+      <p>Área de Download de ferramentas e instaladores do sistema.</p>
+      <div class="container">    
   <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-heading">BITMAX EMPRESARIAL 2.00L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Instalador versão 20.02.2019+IBexpert</div>
-       <a href="http://download2268.mediafire.com/u4v1hr4kaygg/k8oo433wu1c17na/BitmaxInstall_Empresarial_2.00L.rar" class="btn btn-primary btn-block" target="_blank">Download</a>
+       <a href="http://www.mediafire.com/file/k8oo433wu1c17na/BitmaxInstall_Empresarial_2.00L.rar/file" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -76,7 +72,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 2.00L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Executáveis Atualização 20.02.2019+IBexpert</div>
-        <a href="http://download2262.mediafire.com/1mcttin0tbog/h5i8y0np7jqgfiv/Atualiza%C3%A7%C3%B5es+Empresarial+20.02.2019.rar" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="http://www.mediafire.com/file/h5i8y0np7jqgfiv/Atualiza%25C3%25A7%25C3%25B5es_Empresarial_20.02.2019.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -84,7 +80,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 191L</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Executáveis Atualização 30.11.2018+IBexpert</div>
-        <a href="http://download2263.mediafire.com/8bj8oc1u7iug/ihf209ixsedl5bf/Atualiza%C3%A7%C3%A3o+Empresarial+30.11.2018.rar" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="http://www.mediafire.com/file/ihf209ixsedl5bf/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_30.11.2018.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
   </div>
@@ -105,7 +101,7 @@
         <div class="panel-heading">IBEXPERT</div>
         <div class="panel-body"><img src="https://lh3.googleusercontent.com/proxy/09b8ur3uW1W1QuIL7zjAvGYv_-ZTVlDa3RV1t_OISwvP6f9brdfO32neqXttlc7Wwjjd0koSiBjm6vWsZKk-EWcdxTUZxgFlQJme3Re61Q=w530-h408-p-rw" class="img-responsive" style="width:27%"; " alt="Image"></div>
         <div class="panel-footer">Ib expert</div>
-        <a href="http://download1648.mediafire.com/3bcidccovifg/c496d5yden1fb8r/ibexpert.exe" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="http://www.mediafire.com/file/c496d5yden1fb8r/ibexpert.exe/file" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -118,6 +114,20 @@
     </div>
   </div>
 </div><br><br>
+    </div>
+    <div id="menu2" class="tab-pane fade">
+      <h3>Manuais</h3>
+      <p>Em desenvolvimento.</p>
+    </div>
+    <div id="menu3" class="tab-pane fade">
+      <h3>Perguntas Frequentes</h3>
+      <p>Em desenvolvimento.</p>
+      <a href='#pergunta1'>teste</a>
+      Resposta 1 : <a name='#pergunta1'>resposta teste</a> - <a href=#top>Topo</a>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+  </div>
+</div>
 
 <footer class="container-fluid text-center">
   <p>Bitmax Copyright</p>  
