--- a/index.html
+++ b/index.html
@@ -150,18 +150,18 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 1.90M</div>
+        <div class="panel-heading">BITMAX EMPRESARIAL 2.10M</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Instalador versão 21.05.2019+IBexpert</div>
-       <a href="https://www.mediafire.com/file/g7dw3d7hg5sy8xn/Instalador_1.90M.rar/file" class="btn btn-primary btn-block" target="_blank">Download</a>
+       <a href="http://www.mediafire.com/file/xkpnu2c1y7qkjjn/Instalador+2.10M.rar" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
       <div class="panel panel-primary">
-        <div class="panel-heading">BITMAX EMPRESARIAL 1.90M</div>
+        <div class="panel-heading">BITMAX EMPRESARIAL 2.10M</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Executáveis Atualização 21.05.2019+IBexpert</div>
-        <a href="https://www.mediafire.com/file/ee6my2rog87ocwy/Atualiza%E7%E3o_Empresaria_21.05.2019.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="http://www.mediafire.com/file/88w6yptrg5h5pr8/Atualiza%C3%A7%C3%A3o+Empresarial+21.05.2019.rar" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
