--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="panel-heading">BITMAX EMPRESARIAL 2.10M</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
         <div class="panel-footer">Executáveis Atualização 21.05.2019+IBexpert</div>
-        <a href="http://www.mediafire.com/file/88w6yptrg5h5pr8/Atualiza%C3%A7%C3%A3o+Empresarial+21.05.2019.rar" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="http://www.mediafire.com/file/t4zwo758jsgii07/Atualiza%25C3%25A7%25C3%25A3o_Empresarial_21.05.2019.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -178,10 +178,10 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">VAZIO</div>
+        <div class="panel-heading">Acessos Remotos</div>
         <div class="panel-body"><img src="https://static.wixstatic.com/media/a05cd2_07ed83808cb44afd85a27be92af0065e.png/v1/fill/w_426,h_86,al_c,q_80,usm_0.33_1.00_0.00/a05cd2_07ed83808cb44afd85a27be92af0065e.webp" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Vide informações no arquivo</div>
-        <a href="" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <div class="panel-footer">Anydesk+AA_V3+Team Viewer</div>
+        <a href="https://www.mediafire.com/file/pdldzgixlr9j00j/Acesso_Remotos.rar/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       </div>
     </div>
     <div class="col-sm-4"> 
@@ -197,7 +197,7 @@
         <div class="panel-heading">Firebird</div>
         <div class="panel-body"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYSrYt2EPXIDkza1XB18XTUdY7bGd8ytHRZIJCYGrPWJbdkoZ0" class="img-responsive" style="width:88%" alt="Image"></div>
         <div class="panel-footer">Firebird 2.0.7</div>
-        <a href="" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+        <a href="http://www.mediafire.com/file/ciz8kstm4w3xv74/Instalador_Firebird.exe/file" class="btn btn-primary btn-block" >Download</a>
       </div>
     </div>
   </div>
@@ -205,7 +205,7 @@
     </div>
     <div id="menu2" class="tab-pane fade">
       <h3>Manuais</h3>
-      <p>Em desenvolvimento.</p>
+      <a href="http://www.mediafire.com/file/z7xyl73h53n4kub/Manual_Bitmax.chm/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
     <div id="menu3" class="tab-pane fade">
