--- a/index.html
+++ b/index.html
@@ -207,11 +207,13 @@
       <h3>Manuais</h3>
       <a href="http://www.mediafire.com/file/z7xyl73h53n4kub/Manual_Bitmax.chm/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       <br>
-      <h3>Tutorial de venda</h3>
+      <h3>Tutorial de Venda</h3>
       <a href="http://www.mediafire.com/file/v9o582hxgu9vmjt/PASSO_A_PASSO_DE_VENDAS.pdf/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
       <br>
-      <h3>Tutorial de compras</h3>
+      <h3>Tutorial de Compras</h3>
       <a href="http://www.mediafire.com/file/w8wv0pj79wj0eyz/TUTORIAL_DE_ENTRADA_DE_NOTAS_POR_XML.pdf/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
+       <h3>Tabela de CFOP de Entrada</h3>
+      <a href="https://www.mediafire.com/file/7gqvb0nchtj4vod/nota_de_entrada.pdf/file" class="btn btn-primary btn-block" class="btn btn-primary btn-block" target="_blank">Download</a>
     </div>
     <div id="menu3" class="tab-pane fade">
       
